--- a/index.html
+++ b/index.html
@@ -14,12 +14,40 @@
           rel="stylesheet" type="text/css">
     <style type="text/css">  
       /* Large desktop */
-      @media (min-width: 980px) {
+      @media (min-width: 980px) { 
         body {
-          padding-top: 60px;
+         padding-top: 60px;
+        }
+       .linediv-l {
+         border-right: 1px white solid;
+        }
+       .linediv-r {
+         border-left: 1px white solid;
+       }
       }
-      .container {
-        width: 960px;
+
+      /* Landscape phones and down */
+      @media (max-width: 480px) { 
+       .copy {
+         padding: 2.5% 10%;
+       }
+       .linediv-l {
+         border-bottom: 1px white solid;
+       }
+       .linediv-r {
+         border-top: 1px white solid;
+       }
+      }
+
+      /* All form factors */
+
+      /* Main body and headings */
+      body{
+        font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+      }
+      .heading, .subheading {
+        font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+        text-align: center;
       }
       p.lead {
         padding-top: 1.5%;
@@ -67,7 +95,6 @@
       .footer a {
         color: #ccccff;
       }
-      
     </style>
   </head>
   <body>
@@ -80,7 +107,7 @@
 	  <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target="nav-collapse">
 	    <span class="icon-bar"></span>
 	    <span class="icon-bar"></span>
-	    <span class="icon-bar"></spam>
+	    <span class="icon-bar"></span>
           </button>
           <a class="brand" href="#">Bitstarter</a>
 	  <div class="nav-collapse collapse">
