--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
       .video, .thermometer, .order, .social, .statistics {
         text-align: center;
       }
-      .statistics h3, .statitics p {
+      .statistics h3, .statistics p {
         color: white;
       }
+
        /* Marketing Copy and Footer */
       .copy {
         padding-top: 2.5%;
@@ -145,7 +146,8 @@
         <div class="span5 offset1 video">
           <img class="img-polaroid" src="http://placehold.it/480x300">
         </div>
-       <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
+       
+	<!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
         <div class="span5 actions">
           <div class="span8 offset2">
             <div class="statistics">
@@ -157,8 +159,7 @@
                 <h3>1000</h3> <p>backers</p>
                 </div>
               </div>
-              <div class="span4">
-            
+              <div class="span4">    
 		<div class="linediv-c">
                   <h3>$6000</h3> <p>of $10,000</p>
                 </div>
