--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>shopalite</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -110,7 +110,7 @@
 	    <span class="icon-bar"></span>
 	    <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Bitstarter</a>
+          <a class="brand" href="#">shopalite</a>
 	  <div class="nav-collapse collapse">
 	    <ul class="nav">
 	      <li class="active"><a href="#">Home</a></li>
@@ -128,18 +128,18 @@
     <!-- http://stackoverflow.com/a/12270322 -->
     <div class="container">
       <!-- Font and paired font of .heading/.subheading and body from Google Fonts -->
-      <!-- ww.google.com/fonts/specimen/Ubuntu -->
+      <!-- www.google.com/fonts/specimen/Ubuntu -->
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings --> 
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>shopalite</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">All access online shopping.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -202,17 +202,14 @@
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+	    <h3>Shop online like never before.</h3>
+	    Shopalite is a social shopping network offering an all access
+	    online shopping experience. We are partnering with thousands of
+	    the world's leading brands, retailers and influencers so that 
+	    you can follow, engage and shop with your favorites all in one
+	    place. Find the product you need with our detailed search or 
+	    discover items you want as the trending feed is exclusively tailored 
+	    via your shopping habits and followings.  
           </p>
         </div>
       </div>
@@ -220,18 +217,13 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
-          </p>
+            <h3>Follow. Discover. Engage.</h3>
+	    Follow your favorite brands, influencers and even fellow
+	    shopalites to discover more of what you love. Engage with your
+	    favorite retailers to stay on top of new items and receive
+	    exclusive deals. Shop with ease as checkout, order info and
+	    shipping confirmation will all be available on site.
+	  </p>
         </div>
         <div class="span5 asset">
           <img class="img-polaroid" src="http://placehold.it/480x300">
