Edited product desc in index.html

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">All access online shopping.</p>
+          <p class="lead">Your all access pass to shop.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
