Fixed staging buhs in develop branch

--- a/index.html
+++ b/index.html
@@ -200,12 +200,13 @@
           <p>
 	    <h3>Shop online like never before.</h3>
 	    Shopalite is a social shopping network offering an all access
-	    online shopping experience. We are partnering with thousands of
+	    shopping experience. We are partnering with thousands of
 	    the world's leading brands, retailers and influencers so that 
 	    you can follow, engage, and shop with your favorites all in one
 	    place. Find the product you need with our detailed search or 
 	    discover items you want as the trending feed is exclusively tailored 
-	    via your shopping habits and followings.  
+	    via your shopping habits and followings. Shop smart. Be smart. Become 
+	    a shopalite!
           </p>
         </div>
       </div>
@@ -215,13 +216,11 @@
           <p>
             <h3>Follow. Discover. Engage.</h3>
 	    Follow your favorite brands, influencers and even fellow
-	    shopalites to discover more of what you love. Engage with your
+	    shopalites. Discover more of what you love as we learn more about you
+	    and tailor our recommendations accordingly. Engage with your
 	    favorite retailers to stay on top of new items and receive
 	    exclusive deals. Shop with ease as checkout, order information, and
-	    shipping confirmation will all be available within your profile. Sign up
-	    now to stay updated on our progress. The first 1000 who sign up and like our
-	    Facebook page will be given the chance to participate as one of our first
-	    beta users. Sign up today!
+	    shipping confirmation will all be available within your profile.
 	  </p>
         </div>
         <div class="span5 asset">
