--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -97,6 +98,11 @@
       .footer a {
         color: #ccccff;
       }
+      /* http://support.addthis.com/customer/portal/questions/1136093-share-buttons-in-center-position */      
+      div.addthis_toolbox {
+      width:180px;
+      margin: 0 auto;
+      }
     </style>
   </head>
   <body>
@@ -184,8 +190,16 @@
           <div class="span8 offset2 social">
             <!-- Social buttons are not included in default Bootstrap. -->
             <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Follow</button>
-            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Like</button>
+            <!-- AddThis Button BEGIN -->
+	    <div class="addthis_toolbox addthis_default_style ">
+	      <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+	      <a class="addthis_button_tweet"></a>
+	      <a class="addthis_button_pinterest_pinit"></a>
+	      <a class="addthis_counter addthis_pill_style"></a>
+	    </div>
+	    <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+	    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5208229c0a62a254"></script>
+	    <!-- AddThis Button END -->
           </div>
         </div>
       </div>
